# blog

./: .gitignore  README.md  blog.cabal  site.hs  stack.yaml  sync.sh
.github/workflows/: deploy.yml
_site/: about.html  archive.html  atom.xml  contact.html  index.html
_site/2013/02/12/: soundfury-review.html
_site/2013/07/10/: cuijian.html
_site/2013/09/04/: taiwan.html
_site/2013/11/23/: metropolitan.html
_site/2014/04/02/: patience.html
_site/2017/04/08/: shanghai.html
_site/css/: main.css
css/: main.css
posts/2013/02/12/: soundfury-review.markdown
posts/2013/07/10/: cuijian.markdown
posts/2013/09/04/: taiwan.markdown
posts/2013/11/23/: metropolitan.markdown
posts/2014/04/02/: patience.markdown
posts/2017/04/08/: shanghai.markdown
posts/2022/02/01/: on-going-home.markdown
posts/2022/04/27/: bookstores.markdown
posts/2022/05/01/: wulingyuan.markdown
posts/2022/05/20/: changsha.markdown
posts/2022/05/31/: quanzhou.markdown
posts/2022/06/13/: luo-dayou.markdown
posts/2022/12/27/: japan-2022.markdown
posts/2025/04/12/: sinicized-japan.markdown
posts/2025/04/29/: yakitori.markdown
posts/2025/09/18/: church.markdown
templates/: default.html  post-list.html  post.html
