cabal-version:  2.4
name:           blog
version:        1.0.0
build-type:     Simple

executable site
  main-is:          site.hs
  build-depends:    base >= 4.12 && < 5
                  , hakyll >= 4.15 && < 4.17
                  , time  >= 1.9  && < 2
  ghc-options:      -threaded
  default-language: Haskell2010
